; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_mmgr.c_HPDF_MMgr_Free.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_mmgr.c_HPDF_MMgr_Free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, i32 (%struct.TYPE_6__*)*, %struct.TYPE_6__*, %struct.TYPE_6__* }

@.str = private unnamed_addr constant [17 x i8] c" HPDF_MMgr_Free\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"-%p mmgr-node-free\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"-%p mmgr-free\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HPDF_MMgr_Free(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %5 = call i32 @HPDF_PTRACE(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %7 = icmp eq %struct.TYPE_6__* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %38

9:                                                ; preds = %1
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %3, align 8
  br label %13

13:                                               ; preds = %16, %9
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = icmp ne %struct.TYPE_6__* %14, null
  br i1 %15, label %16, label %29

16:                                               ; preds = %13
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  store %struct.TYPE_6__* %17, %struct.TYPE_6__** %4, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 3
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  store %struct.TYPE_6__* %20, %struct.TYPE_6__** %3, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = bitcast %struct.TYPE_6__* %21 to i8*
  %23 = call i32 @HPDF_PTRACE(i8* %22)
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 2
  %26 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %25, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %28 = call i32 %26(%struct.TYPE_6__* %27)
  br label %13

29:                                               ; preds = %13
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %31 = bitcast %struct.TYPE_6__* %30 to i8*
  %32 = call i32 @HPDF_PTRACE(i8* %31)
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 2
  %35 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %34, align 8
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %37 = call i32 %35(%struct.TYPE_6__* %36)
  br label %38

38:                                               ; preds = %29, %8
  ret void
}

declare dso_local i32 @HPDF_PTRACE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
